--- a/index.html
+++ b/index.html
@@ -3,60 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aesthetic Minimalist Website</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #A1C9DF;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            flex-direction: column;
-        }
-        .container {
-            background: white;
-            padding: 30px;
-            border-radius: 20px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            width: 80%;
-            max-width: 500px;
-        }
-        h1 {
-            color: #4A7D96;
-            font-size: 2rem;
-        }
-        p {
-            color: #666;
-            font-size: 1rem;
-        }
-        .button {
-            background-color: #4A7D96;
-            color: white;
-            padding: 10px 20px;
-            border-radius: 10px;
-            text-decoration: none;
-            font-weight: bold;
-            display: inline-block;
-            margin-top: 20px;
-            transition: background 0.3s ease;
-        }
-        .button:hover {
-            background-color: #356074;
-        }
-    </style>
+    <title>Bit by Bit Coding</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div>
+        <img src="images/logo-color.png" alt="Bit by Bit Coding" class="logo">
+    </div>
     <div class="container">
         <h1>Welcome to Bit by Bit</h1>
         <p>Igniting interest in coding worldwide.</p>
-        <a href="#" class="button">Courses</a>
-        <a href="#" class="button">Hackathons</a>
-        <a href="#" class="button">Work With Us</a>
-        <a href="#" class="button">About Us</a>
+        <a href="courses.html" class="button">Courses</a>
+        <a href="hackathons.html" class="button">Hackathons</a>
+        <a href="workwithus.html" class="button">Work With Us</a>
+        <a href="aboutus.html" class="button">About Us</a>
     </div>
 </body>
 </html>
