Updated dates, times, and about

--- a/aboutus.html
+++ b/aboutus.html
@@ -116,11 +116,7 @@
             <!--img src="images/victoria_glossip.jpeg" alt="Victoria Glossip" style="max-width: 20%; height: auto; border-radius: 50%;"-->
             <h3>Founder | Chief Executive Officer</h3>
             <h4>Victoria Glossip</h4>
-            <p>Victoria Glossip is the founder and CEO of Bit by Bit Coding, an award-winning advocate for computer science education, and a passionate leader dedicated to making tech accessible for all. As an NCWIT Impact Award recipient and the youngest Junior Developer Intern at Farragut Systems, she has worked on cutting-edge projects in web development, data analytics, and automation.
-
-            Beyond her technical expertise, Victoria has expanded coding education access globally, reaching thousands of students through free courses, workshops, and mentorship. She is a global WiSTEM ambassador, a published author of A Girl’s Blueprint to Building Websites, and the creator of "Bit by Bit in a Kit," a resource empowering students to start coding clubs worldwide.
-                
-            Victoria is pursuing a double major in Computer Science and Statistics, with the goal of shaping the future of technology through innovation, education, and advocacy. Through Bit by Bit Coding, she continues to inspire and equip the next generation of programmers—bit by bit.</p>
+            <p>Victoria is a nationally recognized, award-winning advocate for computer science education and holds certifications in computer programming and web development. Her expertise spans Python, Java, SQL, C#, JavaScript, HTML, and CSS. She further fuels her passion for computer science through her role as a Junior Developer Intern at Farragut Systems, Inc. As the published author of the Bit by Bit series, Victoria continues to inspire and support aspiring programmers worldwide.</p>
         </section>
 
         <section>
