--- a/courses.html
+++ b/courses.html
@@ -149,28 +149,29 @@
         <!-- Upcoming Classes -->
         <div class="container upcoming-classes">
             <h1>Upcoming Classes</h1>
+            <p>All prep courses run for 4 weeks, meeting via Zoom on 7/5/2025, 7/12/2025, 7/19/2025, & 7/26/2025</p>
             <h2>Web Development Hackathon Prep</h2>
             <ul>
-                <li>Web Dev Prep Course A
-                    <div class="nested-list">Date: June 8th, 2024, Time: 12:00 PM EST - 1:30 PM EST</div>
+                <li>Web Dev Prep Beginner
+                    <div class="nested-list">Time: 10:00 AM EST - 11:30 AM EST</div>
                 </li>
-                <li>Web Dev Prep Course B
-                    <div class="nested-list">Date: July 13th, 2025, Time: 12:00 PM EST - 1:30 PM EST</div>
+                <li>Web Dev Prep Intermediate
+                    <div class="nested-list">Time: 11:30 AM EST - 1:00 PM EST</div>
                 </li>
-                <li>Web Dev Prep Course C
-                    <div class="nested-list">Date: August 3rd, 2025, Time: 12:00 PM EST - 1:30 PM EST</div>
+                <li>Web Dev Prep Advanced
+                    <div class="nested-list">Time: 1:00 PM EST - 2:30 PM EST</div>
                 </li>
             </ul>
             <h2>App Development Hackathon Prep</h2>
             <ul>
-                <li>App Dev Prep Course A
-                    <div class="nested-list">Date: June 29th, 2025, Time: 12:00 PM EST - 1:30 PM EST</div>
+                <li>App Dev Prep Beginner
+                    <div class="nested-list">Time: 10:00 AM EST - 11:30 AM EST</div>
                 </li>
-                <li>App Dev Prep Course B
-                    <div class="nested-list">Date: July 20th, 2025, Time: 12:00 PM EST - 1:30 PM EST</div>
+                <li>App Dev Prep Intermediate
+                    <div class="nested-list">Time: 11:30 AM EST - 1:00 PM EST</div>
                 </li>
-                <li>App Dev Prep Course C
-                    <div class="nested-list">Date: August 17th, 2025, Time: 12:00 PM EST - 1:30 PM EST</div>
+                <li>App Dev Prep Advanced
+                    <div class="nested-list">Time: 1:00 PM EST - 2:30 PM EST</div>
                 </li>
             </ul>
             <button class="button" onclick="register()">Register</button>
