--- a/hackathons.html
+++ b/hackathons.html
@@ -140,13 +140,13 @@
             <h2>Web Development Hackathons</h2>
             <ul>
                 <li>Web Dev Hackathon
-                    <div class="nested-list">Date: September 21st, 2025, Time: 12:00 PM EST - 3:00 PM EST, Judging: 3:00 PM EST - 4:00 PM EST</div>
+                    <div class="nested-list">Date: August 2nd, 2025, Time: 12:00 PM EST - 3:00 PM EST, Judging: 3:00 PM EST - 4:00 PM EST</div>
                 </li>
             </ul>
             <h2>App Development Hackathons</h2>
             <ul>
                 <li>App Dev Hackathon
-                    <div class="nested-list">Date: September 28th, 2025, Time: 12:00 PM EST - 3:00 PM EST, Judging: 3:00 PM EST - 4:00 PM EST</div>
+                    <div class="nested-list">Date: August 2nd, 2025, Time: 12:00 PM EST - 3:00 PM EST, Judging: 3:00 PM EST - 4:00 PM EST</div>
                 </li>
             </ul>
             <button class="button" onclick="register()">Register for Hackathons</button>
