Added wavy line, more updates

--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
     <title>About Us</title>
     <link rel="stylesheet" href="styles.css">
     <style>
-            body {
+    body {
         font-family: 'Arial', sans-serif;
         background-color: #E3F2FD; /* Softer background for readability */
         margin: 0;
@@ -13,6 +13,16 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+    }
+
+    .logo {
+        width: 100px;
+        height: 100px;
+        margin-bottom: 20px;
+        border-radius: 50%;border-radius: 50%;
+        position: absolute; top: 0; left: 0;
+        padding-left: 10px;
+        padding-top: 10px;
     }
 
     .navbar {
@@ -98,6 +108,9 @@
     </style>
 </head>
 <body>
+    <div>
+        <img src="images/logo-color.png" alt="Bit by Bit Coding" class="logo">
+    </div>
     <div class="navbar">
         <div class="navbar-links">
             <a class="navbar-link" href="index.html">Home</a>
@@ -147,5 +160,9 @@
                 </p>
         </section>
     </main>
+    <!--<footer>
+        <h5>Questions? Contact us!</h5>
+        <p>bitbybitcoding49@gmail.com</p>
+    </footer>-->
 </body>
 </html>
