--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bit by Bit Coding</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="wavyline.css">
 </head>
 <body>
+<div class="wave-container"> 
     <div>
         <img src="images/logo-color.png" alt="Bit by Bit Coding" class="logo">
     </div>
@@ -18,5 +20,13 @@
         <a href="workwithus.html" class="button">Work With Us</a>
         <a href="aboutus.html" class="button">About Us</a>
     </div>
+    <footer>
+        <h5>Questions? Contact us!</h5>
+        <p>bitbybitcoding49@gmail.com</p>
+    </footer>
+</div>
+<div style="height: 50vh;background-color: #A1C9DF;">
+
+</div>
 </body>
 </html>
