--- a/courses.html
+++ b/courses.html
@@ -81,6 +81,9 @@
     </style>
 </head>
 <body>
+    <div>
+        <img src="images/logo-color.png" alt="Bit by Bit Coding" class="logo">
+    </div>
     <div class="navbar">
         <div class="navbar-links">
             <a class="navbar-link" href="index.html">Home</a>
@@ -98,6 +101,15 @@
             background-color: #4A7D96;
             padding: 10px 20px;
             color: white;
+        }
+        .logo {
+            width: 100px;
+            height: 100px;
+            margin-bottom: 20px;
+            border-radius: 50%;border-radius: 50%;
+            position: absolute; top: 0; left: 0;
+            padding-left: 10px;
+            padding-top: 10px;
         }
         .navbar-brand {
             font-size: 1.2rem;
@@ -183,5 +195,9 @@
             alert("Redirecting to the registration page.");
         }
     </script>
+    <!--<footer>
+        <h5>Questions? Contact us!</h5>
+        <p>bitbybitcoding49@gmail.com</p>
+    </footer>-->
 </body>
 </html>
