Added the FaceBook logo

--- a/aboutus.html
+++ b/aboutus.html
@@ -105,6 +105,13 @@
     button:hover {
         background-color: #356074;
     }
+    footer {
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        padding: 10px;
+        width: 100%;
+    }
     </style>
 </head>
 <body>
@@ -160,9 +167,12 @@
                 </p>
         </section>
     </main>
-    <!--<footer>
+    <footer>
         <h5>Questions? Contact us!</h5>
         <p>bitbybitcoding49@gmail.com</p>
-    </footer>-->
+        <a href="https://www.facebook.com/bitbybitcodingwithvictoria" class="social-link">
+            <img src="images/brandlogos/Facebook Brand Asset Pack/Logo/Primary Logo/Facebook_Logo_Primary.ai" alt="Facebook" class="social-icon">
+        </a>
+    </footer>
 </body>
 </html>
