--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <footer>
         <h5>Questions? Contact us!</h5>
         <p>bitbybitcoding49@gmail.com</p>
+        <a href="https://www.facebook.com/bitbybitcodingwithvictoria" class="social-link">
+            <img src="images/brandlogos/Facebook Brand Asset Pack/Logo/Primary Logo/Facebook_Logo_Primary.ai" alt="Facebook" class="social-icon">
+        </a>
     </footer>
 </div>
 <div style="height: 50vh;background-color: #A1C9DF;">
