Fixed the facebook logo

--- a/aboutus.html
+++ b/aboutus.html
@@ -25,6 +25,11 @@
         padding-top: 10px;
     }
 
+    .social-icon {
+        width: 50px;
+        height: 50px;
+        margin: 10px;
+    }
     .navbar {
         background-color: #4A7D96;
         padding: 10px;
@@ -171,7 +176,7 @@
         <h5>Questions? Contact us!</h5>
         <p>bitbybitcoding49@gmail.com</p>
         <a href="https://www.facebook.com/bitbybitcodingwithvictoria" class="social-link">
-            <img src="images/brandlogos/Facebook Brand Asset Pack/Logo/Primary Logo/Facebook_Logo_Primary.ai" alt="Facebook" class="social-icon">
+            <img src="images/brandlogos/Facebook Brand Asset Pack/Logo/Primary Logo/Facebook_Logo_Primary.png" alt="Facebook" class="social-icon">
         </a>
     </footer>
 </body>
