--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h5>Questions? Contact us!</h5>
         <p>bitbybitcoding49@gmail.com</p>
         <a href="https://www.facebook.com/bitbybitcodingwithvictoria" class="social-link">
-            <img src="images/brandlogos/Facebook Brand Asset Pack/Logo/Primary Logo/Facebook_Logo_Primary.ai" alt="Facebook" class="social-icon">
+            <img src="images/brandlogos/Facebook Brand Asset Pack/Logo/Primary Logo/Facebook_Logo_Primary.png" alt="Facebook" class="social-icon">
         </a>
     </footer>
 </div>
