added picutre and changed layout of about us page

--- a/courses.html
+++ b/courses.html
@@ -29,6 +29,7 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             grid-gap: 20px;
+            padding-top: 60px;
         }
         .current-classes {
             background: white;
