--- a/hackathons.html
+++ b/hackathons.html
@@ -38,6 +38,7 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             grid-gap: 20px;
+            padding-top: 60px;
         }
         .current-hackathons {
             background: white;
