--- a/aboutus.html
+++ b/aboutus.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-W878874MBN"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-W878874MBN'); </script>
     <title>About Us</title>
     <link rel="stylesheet" href="styles.css">
     <style>
