Added more positions

--- a/workwithus.html
+++ b/workwithus.html
@@ -137,7 +137,8 @@
     <ul>
         <li>Coach</li>
         <li>Judge</li>
-        <!-- Add more roles as needed -->
+        <li>Director of Outreach</li>
+        <li>Director of Social Media</li>
     </ul>
 
     <button onclick='window.location.href="https://docs.google.com/forms/d/e/1FAIpQLSfy7vPqjmUi4KTKC3yVZHzLkG_dawAISjXfY2Mvg0RGHaZLxw/viewform?usp=sharing"'>Sign Up</button>
