Added FAQ page, added href to logo, course updates

--- a/aboutus.html
+++ b/aboutus.html
@@ -39,6 +39,14 @@
         height: 50px;
         margin: 10px;
     }
+
+    .navbar-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 20px;
+    }
     .navbar {
         background-color: #4A7D96;
         padding: 10px;
@@ -443,8 +451,11 @@
 </head>
 <body>
     <div>
-        <img src="images/logo-color.png" alt="Bit by Bit Coding" class="logo">
+        <a href="index.html">
+            <img src="images/logo-color.png" alt="Bit by Bit Coding" class="logo">
+        </a>
     </div>
+    <div class="navbar-container">
     <div class="navbar">
         <div class="navbar-links">
             <a class="navbar-link" href="index.html">Home</a>
@@ -452,11 +463,13 @@
             <a class="navbar-link" href="hackathons.html">Hackathons</a>
             <a class="navbar-link" href="workwithus.html">Work With Us</a>
             <a class="navbar-link" href="aboutus.html">About Us</a>
+            <a class="navbar-link" href="faq.html">FAQ</a>
         </div>
     </div>
-    <header>
+</div>
+    <!--header>
         <h1>About Us</h1>
-    </header>
+    </header-->
     <main>
         <section class="team">
             <h2 style="text-align: center;">Board of Directors</h2>
@@ -604,7 +617,7 @@
             <ul>
                 <li>Expanding access to coding education through free courses, workshops, and mentorship.</li>
                 <li>Creating inclusive learning opportunities, particularly for young girls in STEM.</li>
-                <li>Offering flexible learning models, including recorded sessions and self-paced programs, to ensure that every student has the opportunity to succeed.</li>
+                <!--<li>Offering flexible learning models, including recorded sessions and self-paced programs, to ensure that every student has the opportunity to succeed.</li>-->
                 <li>Supporting the next generation of leaders by providing guidance in both technical and leadership skills.</li>
             </ul>
         </section>
