--- a/courses.html
+++ b/courses.html
@@ -84,7 +84,9 @@
 </head>
 <body>
     <div>
-        <img src="images/logo-color.png" alt="Bit by Bit Coding" class="logo">
+        <a href="index.html">
+            <img src="images/logo-color.png" alt="Bit by Bit Coding" class="logo">
+        </a>
     </div>
     <div class="navbar">
         <div class="navbar-links">
@@ -93,6 +95,7 @@
             <a class="navbar-link" href="hackathons.html">Hackathons</a>
             <a class="navbar-link" href="workwithus.html">Work With Us</a>
             <a class="navbar-link" href="aboutus.html">About Us</a>
+            <a class="navbar-link" href="faq.html">FAQ</a>
         </div>
     </div>
     <style>
@@ -133,31 +136,32 @@
         <!-- Current Classes -->
         <div class="container current-classes">
             <h1>Current Classes</h1>
+            <p>All prep courses run for 10 weeks, meeting via Zoom on 2/15/2025, 2/22/2025, 3/1/2025, 3/8/2025, 3/15/2025, 3/22/2025, 3/29/2025, 4/5/2025, 4/12/2025, & 4/19/2025</p>
             <h2>Web Development Hackathon Prep</h2>
             <ul>
-                <li>Web Dev Prep Course A
-                    <div class="nested-list">Date: August 18th, 2024, Time: 12:00 PM EST - 1:30 PM EST</div>
+                <li>Web Dev Prep Beginner
+                    <div class="nested-list">Time: 10:00 AM EST - 11:30 AM EST</div>
                 </li>
-                <li>Web Dev Prep Course B
-                    <div class="nested-list">Date: September 8th, 2024, Time: 12:00 PM EST - 1:30 PM EST</div>
+                <li>Web Dev Prep Intermediate
+                    <div class="nested-list">Time: 11:30 AM EST - 1:00 PM EST</div>
                 </li>
-                <li>Web Dev Prep Course C
-                    <div class="nested-list">Date: October 20th, 2024, Time: 12:00 PM EST - 1:30 PM EST</div>
+                <li>Web Dev Prep Advanced
+                    <div class="nested-list">Time: 1:00 PM EST - 2:30 PM EST</div>
                 </li>
             </ul>
             <h2>App Development Hackathon Prep</h2>
             <ul>
-                <li>App Dev Prep Course A
-                    <div class="nested-list">Date: February 2nd, 2025, Time: 12:00 PM EST - 1:30 PM EST</div>
+                <li>App Dev Prep Beginner
+                    <div class="nested-list">Time: 10:00 AM EST - 11:30 AM EST</div>
                 </li>
-                <li>App Dev Prep Course B
-                    <div class="nested-list">Date: March 9th, 2025, Time: 12:00 PM EST - 1:30 PM EST</div>
+                <li>App Dev Prep Intermediate
+                    <div class="nested-list">Time: 11:30 AM EST - 1:00 PM EST</div>
                 </li>
-                <li>App Dev Prep Course C
-                    <div class="nested-list">Date: April 6th, 2025, Time: 12:00 PM EST - 1:30 PM EST</div>
+                <li>App Dev Prep Advanced
+                    <div class="nested-list">Time: 1:00 PM EST - 2:30 PM EST</div>
                 </li>
             </ul>
-            <!--<button class="button" onclick="register()">Register</button>-->
+            <button class="button" onclick="register()">Register</button>
         </div>
 
         <!-- Upcoming Classes -->
