--- a/hackathons.html
+++ b/hackathons.html
@@ -93,7 +93,9 @@
 </head>
 <body>
     <div>
-        <img src="images/logo-color.png" alt="Bit by Bit Coding" class="logo">
+        <a href="index.html">
+            <img src="images/logo-color.png" alt="Bit by Bit Coding" class="logo">
+        </a>
     </div>
     <div class="navbar">
         <div class="navbar-links">
@@ -102,6 +104,7 @@
             <a class="navbar-link" href="hackathons.html">Hackathons</a>
             <a class="navbar-link" href="workwithus.html">Work With Us</a>
             <a class="navbar-link" href="aboutus.html">About Us</a>
+            <a class="navbar-link" href="faq.html">FAQ</a>
         </div>
     </div>
     <style>
@@ -136,13 +139,13 @@
             <h2>Web Development Hackathons</h2>
             <ul>
                 <li>Web Dev Hackathon
-                    <div class="nested-list">Date: November 17th, 2025, Time: 12:00 PM EST - 3:00 PM EST, Judging: 3:00 PM EST - 4:00 PM EST</div>
+                    <div class="nested-list">Date: April 26th, 2025, Time: 12:00 PM EST - 3:00 PM EST, Judging: 3:00 PM EST - 4:00 PM EST</div>
                 </li>
             </ul>
             <h2>App Development Hackathons</h2>
             <ul>
                 <li>App Dev Hackathon
-                    <div class="nested-list">Date: June 1st, 2025, Time: 12:00 PM EST - 3:00 PM EST, Judging: 3:00 PM EST - 4:00 PM EST</div>
+                    <div class="nested-list">Date: April 26th, 2025, Time: 12:00 PM EST - 3:00 PM EST, Judging: 3:00 PM EST - 4:00 PM EST</div>
                 </li>
             </ul>
             <!--<button class="button" onclick="register()">Register for Hackathons</button>-->
