--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a href="hackathons.html" class="button">Hackathons</a>
         <a href="workwithus.html" class="button">Work With Us</a>
         <a href="aboutus.html" class="button">About Us</a>
+        <a href="faq.html" class="button">FAQ</a>
     </div>
     <footer>
         <h5>Questions? Contact us!</h5>
