--- a/workwithus.html
+++ b/workwithus.html
@@ -112,7 +112,9 @@
 
     </style>
     <div>
-        <img src="images/logo-color.png" alt="Bit by Bit Coding" class="logo">
+        <a href="index.html">
+            <img src="images/logo-color.png" alt="Bit by Bit Coding" class="logo">
+        </a>
     </div>
     <div class="navbar">
         <div class="navbar-links">
@@ -121,6 +123,7 @@
             <a class="navbar-link" href="hackathons.html">Hackathons</a>
             <a class="navbar-link" href="workwithus.html">Work With Us</a>
             <a class="navbar-link" href="aboutus.html">About Us</a>
+            <a class="navbar-link" href="faq.html">FAQ</a>
         </div>
     </div>
 
