--- a/courses.html
+++ b/courses.html
@@ -161,7 +161,7 @@
                     <div class="nested-list">Time: 1:00 PM EST - 2:30 PM EST</div>
                 </li>
             </ul>
-            <button class="button" onclick="register()">Register</button>
+            <!--<button class="button" onclick="register()">Register</button>-->
         </div>
 
         <!-- Upcoming Classes -->
