--- a/faq.html
+++ b/faq.html
@@ -102,7 +102,7 @@
         <h1>Frequently Asked Questions</h1>
         <div class="question">
             <h2>Are Bit by Bit classes free?</h2>
-            <p>Yes! Our classes are completely free! As a nonprofit organization, we are committed to making coding education accessible to everyone.</p>
+            <p>Yes! Our classes are completely free! We are committed to making coding education accessible to everyone.</p>
         </div>
         <div class="question">
             <h2>What do I do if we can't attend a Welcome Session?</h2>
@@ -110,7 +110,7 @@
         </div>
         <div class="question">
             <h2>Can I join without having previous experience and/or knowledge?</h2>
-            <p>Absolutely! Our nonprofit coding organization welcomes beginners and provides a supportive learning environment. We offer classes designed to teach foundational coding skills, allowing you to learn at your own pace and build your knowledge from the ground up.</p>
+            <p>Absolutely! Our coding organization welcomes beginners and provides a supportive learning environment. We offer classes designed to teach foundational coding skills, allowing you to learn at your own pace and build your knowledge from the ground up.</p>
         </div>
         <div class="question">
             <h2>Where is my meeting link for an online class?</h2>
